--- a/package.json
+++ b/package.json
@@ -13,7 +13,9 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-scripts": "5.0.1",
-    "xlsx": "0.18.5"
+    "xlsx": "0.18.5",
+    "jspdf": "3.0.1",
+    "jspdf-autotable": "5.0.2"
   },
   "devDependencies": {
     "@types/react": "18.2.38",
