--- a/package.json
+++ b/package.json
@@ -15,7 +15,10 @@
     "react-scripts": "5.0.1",
     "xlsx": "0.18.5",
     "jspdf": "3.0.1",
-    "jspdf-autotable": "5.0.2"
+    "jspdf-autotable": "5.0.2",
+    "react-chartjs": "1.2.0",
+    "chart.js": "4.5.0",
+    "react-chartjs-2": "5.3.0"
   },
   "devDependencies": {
     "@types/react": "18.2.38",
