--- a/package.json
+++ b/package.json
@@ -14,15 +14,15 @@
     "react-dom": "18.2.0",
     "react-scripts": "5.0.1",
     "xlsx": "0.18.5",
-    "jspdf": "3.0.1",
+    "jspdf": "^2.5.1",
     "jspdf-autotable": "5.0.2",
-    "react-chartjs": "1.2.0",
     "chart.js": "4.5.0",
     "react-chartjs-2": "5.3.0"
   },
   "devDependencies": {
     "@types/react": "18.2.38",
     "@types/react-dom": "18.2.15",
+    "@types/chart.js": "^4.0.0",
     "typescript": "4.4.4"
   },
   "scripts": {
