--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,14 +1,18 @@
 {
-    "include": [
-        "./src/**/*"
-    ],
+    "include": ["./src/**/*"],
     "compilerOptions": {
-        "strict": true,
-        "esModuleInterop": true,
-        "lib": [
-            "dom",
-            "es2015"
-        ],
-        "jsx": "react-jsx"
+      "strict": true,
+      "esModuleInterop": true,
+      "allowSyntheticDefaultImports": true,
+      "module": "esnext",
+      "moduleResolution": "node",
+      "lib": ["dom", "es2015", "esnext"],
+      "jsx": "react-jsx",
+      "skipLibCheck": true,
+      "resolveJsonModule": true,
+      "noEmit": true,
+      "target": "es5",
+      "forceConsistentCasingInFileNames": true,
+      "isolatedModules": true
     }
-}
+  }
