--- a/package.json
+++ b/package.json
@@ -9,20 +9,19 @@
   ],
   "main": "src/index.tsx",
   "dependencies": {
+    "@pmmmwh/react-refresh-webpack-plugin": "^0.6.1",
     "loader-utils": "3.2.1",
+    "lucide-react": "^0.522.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "react-scripts": "5.0.1",
-    "xlsx": "0.18.5",
-    "jspdf": "^2.5.1",
-    "jspdf-autotable": "5.0.2",
-    "chart.js": "4.5.0",
-    "react-chartjs-2": "5.3.0"
+    "react-refresh": "^0.17.0",
+    "react-router-dom": "^7.6.3",
+    "react-scripts": "^5.0.1"
   },
   "devDependencies": {
     "@types/react": "18.2.38",
     "@types/react-dom": "18.2.15",
-    "@types/chart.js": "^4.0.0",
+    "@types/react-router-dom": "^5.3.3",
     "typescript": "4.4.4"
   },
   "scripts": {
